// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`templates > ak > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.gas-cylinder",
        "to": "gas-cylinder.rear",
      },
      {
        "from": "barrel.gas-port",
        "to": "gas-block.barrel",
      },
      {
        "from": "gas-block.gas-cylinder",
        "to": "gas-cylinder.front",
      },
      {
        "from": "gas-cylinder.handguard",
        "to": "handguard.gas-cylinder",
      },
      {
        "from": "receiver.rear-sight",
        "to": "rear-sight.base",
      },
      {
        "from": "barrel.front-sight",
        "to": "front-sight.base",
      },
    ],
    "description": "Generated from the "ak" template with seed 100.",
    "name": "ak-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "bolt-carrier": {
        "family": "bolt-carrier",
        "params": {
          "pattern": "ak",
        },
      },
      "front-sight": {
        "family": "front-sight",
        "params": {
          "style": "ak",
        },
      },
      "gas-block": {
        "family": "gas-block",
      },
      "gas-cylinder": {
        "family": "gas-cylinder",
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "M",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "L",
          "layout": "standard",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "ak",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "L",
          "profile": "ak-curved",
          "variant": "akm",
        },
      },
      "rear-sight": {
        "family": "ak-rear-sight",
      },
      "receiver": {
        "family": "ak-receiver",
        "params": {
          "bore": "S",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "ak-dropped",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.gas-cylinder",
        "to": "gas-cylinder.rear",
      },
      {
        "from": "barrel.gas-port",
        "to": "gas-block.barrel",
      },
      {
        "from": "gas-block.gas-cylinder",
        "to": "gas-cylinder.front",
      },
      {
        "from": "gas-cylinder.handguard",
        "to": "handguard.gas-cylinder",
      },
      {
        "from": "receiver.rear-sight",
        "to": "rear-sight.base",
      },
      {
        "from": "barrel.front-sight",
        "to": "front-sight.base",
      },
    ],
    "description": "Generated from the "ak" template with seed 200.",
    "name": "ak-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "L",
        },
      },
      "bolt-carrier": {
        "family": "bolt-carrier",
        "params": {
          "pattern": "ak",
        },
      },
      "front-sight": {
        "family": "front-sight",
        "params": {
          "style": "ak",
        },
      },
      "gas-block": {
        "family": "gas-block",
      },
      "gas-cylinder": {
        "family": "gas-cylinder",
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "M",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "L",
          "layout": "ak",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "ak",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "L",
          "profile": "ak-curved",
          "variant": "ak74",
        },
      },
      "rear-sight": {
        "family": "ak-rear-sight",
      },
      "receiver": {
        "family": "ak-receiver",
        "params": {
          "bore": "S",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "L",
          "style": "ak-dropped",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.gas-cylinder",
        "to": "gas-cylinder.rear",
      },
      {
        "from": "barrel.gas-port",
        "to": "gas-block.barrel",
      },
      {
        "from": "gas-block.gas-cylinder",
        "to": "gas-cylinder.front",
      },
      {
        "from": "gas-cylinder.handguard",
        "to": "handguard.gas-cylinder",
      },
      {
        "from": "receiver.rear-sight",
        "to": "rear-sight.base",
      },
      {
        "from": "barrel.front-sight",
        "to": "front-sight.base",
      },
    ],
    "description": "Generated from the "ak" template with seed 300.",
    "name": "ak-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "bolt-carrier": {
        "family": "bolt-carrier",
        "params": {
          "pattern": "ak",
        },
      },
      "front-sight": {
        "family": "front-sight",
        "params": {
          "style": "ak",
        },
      },
      "gas-block": {
        "family": "gas-block",
      },
      "gas-cylinder": {
        "family": "gas-cylinder",
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "S",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "L",
          "layout": "standard",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "ak",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "L",
          "profile": "ak-curved",
          "variant": "akm",
        },
      },
      "rear-sight": {
        "family": "ak-rear-sight",
      },
      "receiver": {
        "family": "ak-receiver",
        "params": {
          "bore": "M",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "ak-dropped",
        },
      },
    },
    "root": "receiver",
  },
]
`;

exports[`templates > anti-materiel > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "receiver.handguard",
        "to": "shroud.rear",
      },
      {
        "from": "barrel.muzzle",
        "to": "brake.base",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.rail",
        "slot": 4,
        "to": "sight.base",
      },
      {
        "from": "shroud.trunnion",
        "to": "trunnion.base",
      },
      {
        "from": "trunnion.strut",
        "to": "strut.base",
      },
      {
        "from": "strut.top",
        "to": "bar.base",
      },
      {
        "from": "shroud.bipod",
        "to": "bipod.base",
      },
    ],
    "description": "Generated from the "anti-materiel" template with seed 100.",
    "name": "anti-materiel-100",
    "parts": {
      "bar": {
        "family": "handle-bar",
      },
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "bipod": {
        "family": "bipod",
        "params": {
          "legs": "L",
          "pose": "folded",
        },
      },
      "bolt-carrier": {
        "family": "heavy-bolt-carrier",
      },
      "brake": {
        "family": "muzzle-brake",
        "params": {
          "length": "L",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "L",
        },
      },
      "lower": {
        "family": "heavy-lower",
      },
      "magazine": {
        "family": "heavy-magazine",
      },
      "receiver": {
        "family": "heavy-receiver",
        "params": {
          "action": "auto",
          "bore": "L",
          "feed": "box",
        },
      },
      "shroud": {
        "family": "barrel-shroud",
        "params": {
          "length": "M",
        },
      },
      "sight": {
        "family": "sight",
        "params": {
          "type": "high-mag-5-25x",
        },
      },
      "stock": {
        "family": "recoil-stock",
        "params": {
          "length": "L",
        },
      },
      "strut": {
        "family": "handle-strut",
      },
      "trunnion": {
        "family": "handle-trunnion",
        "params": {
          "pose": "carry",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "receiver.handguard",
        "to": "shroud.rear",
      },
      {
        "from": "barrel.muzzle",
        "to": "brake.base",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.rail",
        "slot": 4,
        "to": "sight.base",
      },
      {
        "from": "shroud.trunnion",
        "to": "trunnion.base",
      },
      {
        "from": "trunnion.strut",
        "to": "strut.base",
      },
      {
        "from": "strut.top",
        "to": "bar.base",
      },
      {
        "from": "shroud.bipod",
        "to": "bipod.base",
      },
      {
        "from": "stock.monopod",
        "to": "monopod.base",
      },
    ],
    "description": "Generated from the "anti-materiel" template with seed 200.",
    "name": "anti-materiel-200",
    "parts": {
      "bar": {
        "family": "handle-bar",
      },
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "bipod": {
        "family": "bipod",
        "params": {
          "legs": "M",
          "pose": "deployed",
        },
      },
      "bolt-carrier": {
        "family": "heavy-bolt-carrier",
      },
      "brake": {
        "family": "muzzle-brake",
        "params": {
          "length": "M",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "L",
        },
      },
      "lower": {
        "family": "heavy-lower",
      },
      "magazine": {
        "family": "heavy-magazine",
      },
      "monopod": {
        "family": "monopod",
        "params": {
          "pose": "deployed",
        },
      },
      "receiver": {
        "family": "heavy-receiver",
        "params": {
          "action": "auto",
          "bore": "L",
          "feed": "box",
        },
      },
      "shroud": {
        "family": "barrel-shroud",
        "params": {
          "length": "L",
        },
      },
      "sight": {
        "family": "sight",
        "params": {
          "type": "high-mag-5-25x",
        },
      },
      "stock": {
        "family": "recoil-stock",
        "params": {
          "length": "L",
        },
      },
      "strut": {
        "family": "handle-strut",
      },
      "trunnion": {
        "family": "handle-trunnion",
        "params": {
          "pose": "stowed",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "receiver.handguard",
        "to": "shroud.rear",
      },
      {
        "from": "barrel.muzzle",
        "to": "brake.base",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "shroud.trunnion",
        "to": "trunnion.base",
      },
      {
        "from": "trunnion.strut",
        "to": "strut.base",
      },
      {
        "from": "strut.top",
        "to": "bar.base",
      },
      {
        "from": "shroud.bipod",
        "to": "bipod.base",
      },
      {
        "from": "stock.monopod",
        "to": "monopod.base",
      },
    ],
    "description": "Generated from the "anti-materiel" template with seed 300.",
    "name": "anti-materiel-300",
    "parts": {
      "bar": {
        "family": "handle-bar",
      },
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "L",
        },
      },
      "bipod": {
        "family": "bipod",
        "params": {
          "legs": "M",
          "pose": "deployed",
        },
      },
      "bolt-carrier": {
        "family": "heavy-bolt-carrier",
      },
      "brake": {
        "family": "muzzle-brake",
        "params": {
          "length": "L",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "L",
        },
      },
      "lower": {
        "family": "heavy-lower",
      },
      "magazine": {
        "family": "heavy-magazine",
      },
      "monopod": {
        "family": "monopod",
        "params": {
          "pose": "deployed",
        },
      },
      "receiver": {
        "family": "heavy-receiver",
        "params": {
          "action": "auto",
          "bore": "L",
          "feed": "box",
        },
      },
      "shroud": {
        "family": "barrel-shroud",
        "params": {
          "length": "M",
        },
      },
      "stock": {
        "family": "recoil-stock",
        "params": {
          "length": "M",
        },
      },
      "strut": {
        "family": "handle-strut",
      },
      "trunnion": {
        "family": "handle-trunnion",
        "params": {
          "pose": "carry",
        },
      },
    },
    "root": "receiver",
  },
]
`;

exports[`templates > ar > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.rail",
        "slot": 3,
        "to": "sight.base",
      },
      {
        "from": "handguard.rail",
        "slot": 10,
        "to": "rail-front-sight.base",
      },
    ],
    "description": "Generated from the "ar" template with seed 100.",
    "name": "ar-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "bolt-carrier": {
        "family": "bolt-carrier",
        "params": {
          "pattern": "ar",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "M",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "layout": "ar",
          "length": "M",
          "mount": "free-float",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "ar",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "M",
          "profile": "stanag-curved",
        },
      },
      "rail-front-sight": {
        "family": "rail-front-sight",
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "S",
          "chargingHandle": "rear-top",
          "feed": "box",
          "rail": "full",
          "section": "ar",
        },
      },
      "sight": {
        "family": "sight",
        "params": {
          "type": "mini-reflex",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "m4",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.rail",
        "slot": 3,
        "to": "sight.base",
      },
      {
        "from": "handguard.rail",
        "slot": 13,
        "to": "rail-front-sight.base",
      },
    ],
    "description": "Generated from the "ar" template with seed 200.",
    "name": "ar-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "L",
        },
      },
      "bolt-carrier": {
        "family": "bolt-carrier",
        "params": {
          "pattern": "ar",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "M",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "layout": "ar",
          "length": "L",
          "mount": "free-float",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "ar",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "M",
          "profile": "stanag-curved",
        },
      },
      "rail-front-sight": {
        "family": "rail-front-sight",
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "S",
          "chargingHandle": "rear-top",
          "feed": "box",
          "rail": "full",
          "section": "ar",
        },
      },
      "sight": {
        "family": "sight",
        "params": {
          "type": "lpvo-1-6x",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "m4",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.rail",
        "slot": 3,
        "to": "sight.base",
      },
      {
        "from": "barrel.front-sight",
        "to": "front-sight.base",
      },
    ],
    "description": "Generated from the "ar" template with seed 300.",
    "name": "ar-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "bolt-carrier": {
        "family": "bolt-carrier",
        "params": {
          "pattern": "ar",
        },
      },
      "front-sight": {
        "family": "front-sight",
        "params": {
          "style": "ar",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "M",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "layout": "ar",
          "length": "M",
          "mount": "clamped",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "ar",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "M",
          "profile": "stanag-curved",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "M",
          "chargingHandle": "rear-top",
          "feed": "box",
          "rail": "full",
          "section": "ar",
        },
      },
      "sight": {
        "family": "sight",
        "params": {
          "type": "lpvo-1-6x",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "m4",
        },
      },
    },
    "root": "receiver",
  },
]
`;

exports[`templates > battle-rifle > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.rail",
        "slot": 3,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "battle-rifle" template with seed 100.",
    "name": "battle-rifle-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
        },
      },
      "bolt-carrier": {
        "family": "bolt-carrier",
        "params": {
          "handleStyle": "battle",
          "pattern": "barrett",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "L",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "L",
          "length": "S",
          "mount": "free-float",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "S",
          "orientation": "slant-5",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "M",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
        "params": {
          "type": "tube-dot",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "straight",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
    ],
    "description": "Generated from the "battle-rifle" template with seed 200.",
    "name": "battle-rifle-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "bolt-carrier": {
        "family": "bolt-carrier",
        "params": {
          "handleStyle": "battle",
          "pattern": "barrett",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "M",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "L",
          "length": "M",
          "mount": "free-float",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "L",
          "orientation": "tilt",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "M",
          "feed": "box",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
    ],
    "description": "Generated from the "battle-rifle" template with seed 300.",
    "name": "battle-rifle-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
        },
      },
      "bolt-carrier": {
        "family": "bolt-carrier",
        "params": {
          "handleStyle": "battle",
          "pattern": "barrett",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "L",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "M",
          "length": "S",
          "mount": "free-float",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "M",
          "orientation": "slant-5",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "L",
          "feed": "box",
        },
      },
    },
    "root": "receiver",
  },
]
`;

exports[`templates > bolt-rifle > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "bolt-carrier.handle",
        "to": "bolt-handle-arm.base",
      },
      {
        "from": "bolt-handle-arm.tip",
        "to": "bolt-handle-knob.base",
      },
      {
        "from": "receiver.rail",
        "slot": 3,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bolt-rifle" template with seed 100.",
    "name": "bolt-rifle-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "L",
        },
      },
      "bolt-carrier": {
        "family": "bolt-carrier",
        "params": {
          "pattern": "bolt",
        },
      },
      "bolt-handle-arm": {
        "family": "bolt-handle-arm",
      },
      "bolt-handle-knob": {
        "family": "bolt-handle-knob",
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "M",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "thumbhole",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "S",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "bolt",
          "bore": "M",
          "feed": "top",
        },
      },
      "sight": {
        "family": "sight",
        "params": {
          "type": "fixed-prism-4x",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "thumbhole",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "bolt-carrier.handle",
        "to": "bolt-handle-arm.base",
      },
      {
        "from": "bolt-handle-arm.tip",
        "to": "bolt-handle-knob.base",
      },
      {
        "from": "receiver.rail",
        "slot": 3,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bolt-rifle" template with seed 200.",
    "name": "bolt-rifle-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "L",
        },
      },
      "bolt-carrier": {
        "family": "bolt-carrier",
        "params": {
          "pattern": "bolt",
        },
      },
      "bolt-handle-arm": {
        "family": "bolt-handle-arm",
      },
      "bolt-handle-knob": {
        "family": "bolt-handle-knob",
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "M",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "S",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "bolt",
          "bore": "M",
          "feed": "top",
        },
      },
      "sight": {
        "family": "sight",
        "params": {
          "type": "digital-thermal",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "L",
          "style": "sporting",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "bolt-carrier.handle",
        "to": "bolt-handle-arm.base",
      },
      {
        "from": "bolt-handle-arm.tip",
        "to": "bolt-handle-knob.base",
      },
    ],
    "description": "Generated from the "bolt-rifle" template with seed 300.",
    "name": "bolt-rifle-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "L",
        },
      },
      "bolt-carrier": {
        "family": "bolt-carrier",
        "params": {
          "pattern": "bolt",
        },
      },
      "bolt-handle-arm": {
        "family": "bolt-handle-arm",
      },
      "bolt-handle-knob": {
        "family": "bolt-handle-knob",
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "M",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "thumbhole",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "S",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "bolt",
          "bore": "L",
          "feed": "top",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "thumbhole",
        },
      },
    },
    "root": "receiver",
  },
]
`;

exports[`templates > bolt-rifle-box > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "bolt-carrier.handle",
        "to": "bolt-handle-arm.base",
      },
      {
        "from": "bolt-handle-arm.tip",
        "to": "bolt-handle-knob.base",
      },
      {
        "from": "receiver.rail",
        "slot": 3,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bolt-rifle-box" template with seed 100.",
    "name": "bolt-rifle-box-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "bolt-carrier": {
        "family": "bolt-carrier",
        "params": {
          "pattern": "bolt",
        },
      },
      "bolt-handle-arm": {
        "family": "bolt-handle-arm",
      },
      "bolt-handle-knob": {
        "family": "bolt-handle-knob",
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "L",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "M",
          "length": "L",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
          "magazineWell": "recessed",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "10-round",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "bolt",
          "bore": "M",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
        "params": {
          "type": "high-mag-5-25x",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "sporting",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "bolt-carrier.handle",
        "to": "bolt-handle-arm.base",
      },
      {
        "from": "bolt-handle-arm.tip",
        "to": "bolt-handle-knob.base",
      },
      {
        "from": "receiver.rail",
        "slot": 3,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bolt-rifle-box" template with seed 200.",
    "name": "bolt-rifle-box-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "L",
        },
      },
      "bolt-carrier": {
        "family": "bolt-carrier",
        "params": {
          "pattern": "bolt",
        },
      },
      "bolt-handle-arm": {
        "family": "bolt-handle-arm",
      },
      "bolt-handle-knob": {
        "family": "bolt-handle-knob",
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "L",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "M",
          "length": "L",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
          "magazineWell": "recessed",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "5-round",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "bolt",
          "bore": "M",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
        "params": {
          "type": "digital-thermal",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "L",
          "style": "sporting",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "bolt-carrier.handle",
        "to": "bolt-handle-arm.base",
      },
      {
        "from": "bolt-handle-arm.tip",
        "to": "bolt-handle-knob.base",
      },
      {
        "from": "receiver.rail",
        "slot": 3,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bolt-rifle-box" template with seed 301.",
    "name": "bolt-rifle-box-301",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "bolt-carrier": {
        "family": "bolt-carrier",
        "params": {
          "pattern": "bolt",
        },
      },
      "bolt-handle-arm": {
        "family": "bolt-handle-arm",
      },
      "bolt-handle-knob": {
        "family": "bolt-handle-knob",
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "L",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
          "magazineWell": "recessed",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "10-round",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "bolt",
          "bore": "M",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
        "params": {
          "type": "high-mag-5-25x",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "L",
          "style": "sporting",
        },
      },
    },
    "root": "receiver",
  },
]
`;

exports[`templates > bolt-rifle-thumbhole > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "bolt-carrier.handle",
        "to": "bolt-handle-arm.base",
      },
      {
        "from": "bolt-handle-arm.tip",
        "to": "bolt-handle-knob.base",
      },
      {
        "from": "receiver.rail",
        "slot": 3,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bolt-rifle-thumbhole" template with seed 100.",
    "name": "bolt-rifle-thumbhole-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "L",
          "profile": "heavy",
        },
      },
      "bolt-carrier": {
        "family": "bolt-carrier",
        "params": {
          "handleProfile": "awm",
          "pattern": "bolt",
        },
      },
      "bolt-handle-arm": {
        "family": "bolt-handle-arm",
      },
      "bolt-handle-knob": {
        "family": "bolt-handle-knob",
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "barrelBore": "L",
          "clearance": "L",
          "length": "M",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "thumbhole",
          "magazineWell": "recessed",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "10-round",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "bolt",
          "bore": "M",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
        "params": {
          "type": "high-mag-5-25x",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "L",
          "style": "thumbhole",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "bolt-carrier.handle",
        "to": "bolt-handle-arm.base",
      },
      {
        "from": "bolt-handle-arm.tip",
        "to": "bolt-handle-knob.base",
      },
      {
        "from": "receiver.rail",
        "slot": 3,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bolt-rifle-thumbhole" template with seed 200.",
    "name": "bolt-rifle-thumbhole-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "L",
          "profile": "heavy",
        },
      },
      "bolt-carrier": {
        "family": "bolt-carrier",
        "params": {
          "handleProfile": "awm",
          "pattern": "bolt",
        },
      },
      "bolt-handle-arm": {
        "family": "bolt-handle-arm",
      },
      "bolt-handle-knob": {
        "family": "bolt-handle-knob",
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "barrelBore": "L",
          "clearance": "L",
          "length": "L",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "thumbhole",
          "magazineWell": "recessed",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "5-round",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "bolt",
          "bore": "M",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
        "params": {
          "type": "high-mag-5-25x",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "L",
          "style": "thumbhole",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "bolt-carrier.handle",
        "to": "bolt-handle-arm.base",
      },
      {
        "from": "bolt-handle-arm.tip",
        "to": "bolt-handle-knob.base",
      },
      {
        "from": "receiver.rail",
        "slot": 3,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bolt-rifle-thumbhole" template with seed 300.",
    "name": "bolt-rifle-thumbhole-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "L",
          "profile": "heavy",
        },
      },
      "bolt-carrier": {
        "family": "bolt-carrier",
        "params": {
          "handleProfile": "awm",
          "pattern": "bolt",
        },
      },
      "bolt-handle-arm": {
        "family": "bolt-handle-arm",
      },
      "bolt-handle-knob": {
        "family": "bolt-handle-knob",
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "thumbhole",
          "magazineWell": "recessed",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "5-round",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "bolt",
          "bore": "M",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
        "params": {
          "type": "lpvo-1-6x",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "L",
          "style": "thumbhole",
        },
      },
    },
    "root": "receiver",
  },
]
`;

exports[`templates > pistol > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "frame.slide",
        "to": "slide.frame",
      },
      {
        "from": "slide.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "frame.barrel",
        "to": "barrel.frame",
      },
      {
        "from": "frame.magazine",
        "to": "magazine.top",
      },
    ],
    "description": "Generated from the "pistol" template with seed 100.",
    "name": "pistol-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
          "profile": "pistol",
        },
      },
      "frame": {
        "family": "frame",
        "params": {
          "bore": "S",
          "gripLength": "S",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "S",
          "profile": "pistol",
        },
      },
      "slide": {
        "family": "slide",
      },
    },
    "root": "frame",
  },
  {
    "connections": [
      {
        "from": "frame.slide",
        "to": "slide.frame",
      },
      {
        "from": "slide.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "frame.barrel",
        "to": "barrel.frame",
      },
      {
        "from": "frame.magazine",
        "to": "magazine.top",
      },
    ],
    "description": "Generated from the "pistol" template with seed 200.",
    "name": "pistol-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
          "profile": "pistol",
        },
      },
      "frame": {
        "family": "frame",
        "params": {
          "bore": "S",
          "gripLength": "M",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "S",
          "profile": "pistol",
        },
      },
      "slide": {
        "family": "slide",
      },
    },
    "root": "frame",
  },
  {
    "connections": [
      {
        "from": "frame.slide",
        "to": "slide.frame",
      },
      {
        "from": "slide.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "frame.barrel",
        "to": "barrel.frame",
      },
      {
        "from": "frame.magazine",
        "to": "magazine.top",
      },
      {
        "from": "slide.rail",
        "slot": 1,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "pistol" template with seed 300.",
    "name": "pistol-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
          "profile": "pistol",
        },
      },
      "frame": {
        "family": "frame",
        "params": {
          "bore": "M",
          "gripLength": "S",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "S",
          "profile": "pistol",
        },
      },
      "sight": {
        "family": "sight",
        "params": {
          "type": "mini-reflex",
        },
      },
      "slide": {
        "family": "slide",
      },
    },
    "root": "frame",
  },
]
`;

exports[`templates > pump-shotgun > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "receiver.tube",
        "to": "tube.rear",
      },
      {
        "from": "tube.cap",
        "to": "barrel.lug",
      },
      {
        "from": "tube.support",
        "to": "barrel.support-lug",
      },
      {
        "from": "tube.forend",
        "to": "forend.rear",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
    ],
    "description": "Generated from the "pump-shotgun" template with seed 100.",
    "name": "pump-shotgun-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
        },
      },
      "bolt-carrier": {
        "family": "bolt-carrier",
        "params": {
          "pattern": "pump",
        },
      },
      "forend": {
        "family": "forend",
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "pump",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "pump",
          "bore": "L",
          "feed": "tube",
          "section": "pump",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "L",
          "style": "tapered-sawed",
        },
      },
      "tube": {
        "family": "tube-magazine",
        "params": {
          "lengthPercent": "100",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "receiver.tube",
        "to": "tube.rear",
      },
      {
        "from": "tube.cap",
        "to": "barrel.lug",
      },
      {
        "from": "tube.support",
        "to": "barrel.support-lug",
      },
      {
        "from": "tube.forend",
        "to": "forend.rear",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
    ],
    "description": "Generated from the "pump-shotgun" template with seed 200.",
    "name": "pump-shotgun-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "bolt-carrier": {
        "family": "bolt-carrier",
        "params": {
          "pattern": "pump",
        },
      },
      "forend": {
        "family": "forend",
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "pump",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "pump",
          "bore": "L",
          "feed": "tube",
          "section": "pump",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "L",
          "style": "tapered",
        },
      },
      "tube": {
        "family": "tube-magazine",
        "params": {
          "lengthPercent": "75",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "receiver.tube",
        "to": "tube.rear",
      },
      {
        "from": "tube.cap",
        "to": "barrel.lug",
      },
      {
        "from": "tube.support",
        "to": "barrel.support-lug",
      },
      {
        "from": "tube.forend",
        "to": "forend.rear",
      },
      {
        "from": "receiver.stock",
        "to": "stock-pistol.front",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "receiver.rail",
        "slot": 3,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "pump-shotgun" template with seed 300.",
    "name": "pump-shotgun-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
        },
      },
      "bolt-carrier": {
        "family": "bolt-carrier",
        "params": {
          "pattern": "pump",
        },
      },
      "forend": {
        "family": "forend",
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "M",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "trigger",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "pump",
          "bore": "L",
          "feed": "tube",
          "section": "pump",
        },
      },
      "sight": {
        "family": "sight",
        "params": {
          "type": "holographic",
        },
      },
      "stock-pistol": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "straight",
        },
      },
      "tube": {
        "family": "tube-magazine",
        "params": {
          "lengthPercent": "100",
        },
      },
    },
    "root": "receiver",
  },
]
`;

exports[`templates > revolver > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "frame.barrel",
        "to": "barrel.frame",
      },
      {
        "from": "frame.cylinder",
        "to": "cylinder.frame",
      },
      {
        "from": "barrel.cylinder",
        "to": "cylinder.barrel",
      },
      {
        "from": "frame.grip-frame",
        "to": "grip.frame-joint",
      },
    ],
    "description": "Generated from the "revolver" template with seed 100.",
    "name": "revolver-100",
    "parts": {
      "barrel": {
        "family": "revolver-barrel",
        "params": {
          "length": "L",
          "style": "vented",
        },
      },
      "cylinder": {
        "family": "revolver-cylinder",
        "params": {
          "chamberCount": "6",
          "chamberIndex": "0",
        },
      },
      "frame": {
        "family": "revolver-frame",
        "params": {
          "bore": "S",
          "butt": "square",
          "frameSize": "S",
        },
      },
      "grip": {
        "family": "revolver-grip",
        "params": {
          "length": "L",
        },
      },
    },
    "root": "frame",
  },
  {
    "connections": [
      {
        "from": "frame.barrel",
        "to": "barrel.frame",
      },
      {
        "from": "frame.cylinder",
        "to": "cylinder.frame",
      },
      {
        "from": "barrel.cylinder",
        "to": "cylinder.barrel",
      },
      {
        "from": "frame.grip-frame",
        "to": "grip.frame-joint",
      },
    ],
    "description": "Generated from the "revolver" template with seed 200.",
    "name": "revolver-200",
    "parts": {
      "barrel": {
        "family": "revolver-barrel",
        "params": {
          "length": "M",
          "style": "vented",
        },
      },
      "cylinder": {
        "family": "revolver-cylinder",
        "params": {
          "chamberCount": "6",
          "chamberIndex": "0",
        },
      },
      "frame": {
        "family": "revolver-frame",
        "params": {
          "bore": "S",
          "butt": "round",
          "frameSize": "M",
        },
      },
      "grip": {
        "family": "revolver-grip",
        "params": {
          "length": "M",
        },
      },
    },
    "root": "frame",
  },
  {
    "connections": [
      {
        "from": "frame.barrel",
        "to": "barrel.frame",
      },
      {
        "from": "frame.cylinder",
        "to": "cylinder.frame",
      },
      {
        "from": "barrel.cylinder",
        "to": "cylinder.barrel",
      },
      {
        "from": "frame.grip-frame",
        "to": "grip.frame-joint",
      },
    ],
    "description": "Generated from the "revolver" template with seed 300.",
    "name": "revolver-300",
    "parts": {
      "barrel": {
        "family": "revolver-barrel",
        "params": {
          "length": "M",
          "style": "classic",
        },
      },
      "cylinder": {
        "family": "revolver-cylinder",
        "params": {
          "chamberCount": "6",
          "chamberIndex": "0",
        },
      },
      "frame": {
        "family": "revolver-frame",
        "params": {
          "bore": "M",
          "butt": "square",
          "frameSize": "S",
        },
      },
      "grip": {
        "family": "revolver-grip",
        "params": {
          "length": "L",
        },
      },
    },
    "root": "frame",
  },
]
`;

exports[`templates > smg > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "handguard.smg-handle",
        "to": "smg-handle.mount",
      },
      {
        "from": "barrel.front-sight",
        "to": "front-sight.base",
      },
      {
        "from": "receiver.rail",
        "slot": 3,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "smg" template with seed 100.",
    "name": "smg-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
        },
      },
      "bolt-carrier": {
        "family": "bolt-carrier",
        "params": {
          "pattern": "smg",
        },
      },
      "front-sight": {
        "family": "front-sight",
        "params": {
          "style": "ar",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "S",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "M",
          "handleStyle": "smg",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "L",
          "profile": "smg",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "S",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
        "params": {
          "type": "tube-dot",
        },
      },
      "smg-handle": {
        "family": "smg-handle",
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "handguard.smg-handle",
        "to": "smg-handle.mount",
      },
      {
        "from": "barrel.front-sight",
        "to": "front-sight.base",
      },
      {
        "from": "receiver.rail",
        "slot": 3,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "smg" template with seed 200.",
    "name": "smg-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
        },
      },
      "bolt-carrier": {
        "family": "bolt-carrier",
        "params": {
          "pattern": "smg",
        },
      },
      "front-sight": {
        "family": "front-sight",
        "params": {
          "style": "ar",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "M",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "M",
          "handleStyle": "smg",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "M",
          "profile": "smg",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "S",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
        "params": {
          "type": "mini-reflex",
        },
      },
      "smg-handle": {
        "family": "smg-handle",
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.bolt-carrier",
        "to": "bolt-carrier.mount",
      },
      {
        "from": "handguard.smg-handle",
        "to": "smg-handle.mount",
      },
      {
        "from": "barrel.front-sight",
        "to": "front-sight.base",
      },
    ],
    "description": "Generated from the "smg" template with seed 300.",
    "name": "smg-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "bolt-carrier": {
        "family": "bolt-carrier",
        "params": {
          "pattern": "smg",
        },
      },
      "front-sight": {
        "family": "front-sight",
        "params": {
          "style": "ar",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "S",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "M",
          "handleStyle": "smg",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "L",
          "profile": "smg",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "S",
          "feed": "box",
        },
      },
      "smg-handle": {
        "family": "smg-handle",
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "S",
          "style": "straight",
        },
      },
    },
    "root": "receiver",
  },
]
`;
